[package]
name = "sdb"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
gimli = "0.31.1"
iced-x86 = "1.21.0"
libc = "0.2.172"
memmap2 = "0.9.5"
nix = { version = "0.30.1", features = ["process", "uio", "fs", "personality", "ptrace"] }
object = "0.36.7"
procfs = "0.17.0"
rustyline = "15.0.0"
